Resolve layout issue after atomic blocks update

--- a/wp-content/themes/thinkery/style.css
+++ b/wp-content/themes/thinkery/style.css
@@ -1971,7 +1971,7 @@ a.tribe-mini-calendar-nav-link.next-month span::before {
 	}
 }
 
-@media only screen and (min-width: 960px) {
+@media only screen and (min-width: 1290px) {
 
 	/* Site Header
 	--------------------------------------------- */
